# tinyc

./: .gitattributes  Cargo.toml
crates/conformance/: CHANGELOG.md  Cargo.toml  README.md
crates/conformance/src/: lib.rs
crates/grammar/: Cargo.toml  build.rs
crates/grammar/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  serde.rs
crates/lexer/tests/: KartikTalwar.json.test  KartikTalwar.ron.test  KartikTalwar.yaml.test  conformance.rs  harness.rs  main.yaml.test
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  lib.rs  parser.rs  token_set.rs
crates/parser/src/parse/: Expression.rs  Statement.rs  Term.rs  mod.rs
crates/parser/tests/: KartikTalwar.yaml.test
meta/: syntax.toml  syntax_kinds.rs  token_kinds.rs
templates/: syntax_kinds.rs  token_kinds.rs
