[package]
name = "conformance"
version = "0.2.0"
edition = "2018"

authors = ["cad97 <cad97@cad97.com>"]
description = "Conformance testing for fn(&str) -> impl Serialize"

repository = "https://github.com/CAD97/tinyc/tree/master/crates/conformance"
readme = "README.md"
keywords = ["testing","conformance","serde"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.4"
quote = "1.0.2"
syn = { version = "1.0", features = ["full"] }
