[package]
name = "tinyc_grammar"
version = "0.1.0"
edition = "2018"

authors = ["cad97 <cad97@cad97.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }

[build-dependencies]
glob = "0.3.0"
heck = "0.3.1"
serde = { version = "1.0.101", features = ["derive"] }
tera = "1.0.0-beta.16"
toml = "0.5.3"
